--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
   --mr-left: 30px;
   --mr-left_s: -30px;
   --pad_pf_car: 20px;
-  --first-fill-color: #757575;
+  --first-fill-color: #afb1b8;
 }
 a {
   display: block;
@@ -92,6 +92,7 @@ body {
   vertical-align: middle;
   margin-right: 10px;
   fill: var(--first-fill-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mail-link:hover .con-icon,
 .tel-link:hover .con-icon,
@@ -130,6 +131,9 @@ body {
   background: var(--button-color);
   color: var(--third-color);
   cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .model-btn:hover,
 .model-btn:focus {
@@ -150,6 +154,35 @@ body {
 
   padding: 6px 22px;
   display: inline-block;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-overlay_conteiner {
+  position: relative;
+  overflow: hidden;
+}
+.port-overlay {
+  position: absolute;
+  height: auto;
+  left: 0;
+  top: 0;
+  transform: translateY(105%);
+  transition: transform 250ms;
+  background: rgba(33, 150, 243, 0.9);
+
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.56;
+  font-weight: 400;
+  color: var(--third-color);
+  vertical-align: top;
+  letter-spacing: 0.03em;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.our_project:hover .port-overlay,
+.our_project:focus .port-overlay {
+  transform: translateY(0%);
 }
 
 .port_btn {
@@ -177,6 +210,7 @@ body {
 .clients-link:focus,
 .clients-link:hover {
   fill: var(--button-color);
+  border-color: var(--button-color);
 }
 
 .social-list-item :focus,
@@ -184,8 +218,8 @@ body {
   fill: var(--third-color);
   background-color: var(--button-color);
 }
-.footer-social-link-item:hover,
-.footer-social-link-item:focus {
+.footer-social-link:hover,
+.footer-social-link:focus {
   background-color: var(--button-color);
 }
 
@@ -235,15 +269,57 @@ body {
 }
 .mail-link,
 .nav-link {
+  display: flex;
+  align-items: center;
   font-weight: 500;
 
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
 
+.nav-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+
+.nav-link::after {
+  content: '';
+  background-color: var(--button-color);
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
+  transform: scaleY(0);
+  transition: transform 1000ms;
+}
+
+.nav-link:focus::after,
+.nav-link:hover::after {
+  transform: scaleY(1);
+}
+
+.active::after {
+  content: '';
+  background-color: var(--button-color);
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
+  transform: scale(1);
+}
+.con-header-item .a {
+  display: flex;
+  align-items: center;
+}
+
 .mail-link,
 .tel-link {
   color: var(--secondary-txt);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*=======END HEADER======*/
@@ -346,6 +422,25 @@ body {
 
 .work-list-item {
   margin-left: var(--mr-left);
+  position: relative;
+}
+
+.work-list-about {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  line-height: 1.14;
+  bottom: 0;
+  left: 0;
+  background: rgba(47, 48, 58, 0.8);
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  color: var(--third-color);
 }
 
 .team-title,
@@ -357,8 +452,7 @@ body {
   margin-bottom: var(--pd-ttl);
 }
 .work-section,
-.team-section,
-.clients-section {
+.team-section {
   display: flex;
   text-align: center;
 }
@@ -430,11 +524,18 @@ body {
   width: 44px;
   height: 44px;
   fill: var(--first-fill-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*======END TEAM SECTION======*/
 
 /*=======CLIENTS/PROJECT SECTION======*/
+
+.clients-section {
+  display: flex;
+  text-align: center;
+}
 
 .project-title {
   font-size: 18px;
@@ -470,7 +571,9 @@ body {
   margin-left: 30px;
   margin-top: 30px;
 }
-
+.overlay_pf {
+  transition: abso;
+}
 .card-pf-txt {
   border: 1px solid #eeeeee;
   box-sizing: border-box;
@@ -500,6 +603,7 @@ body {
   box-sizing: border-box;
   border-radius: 4px;
   fill: var(--first-fill-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*===END CLIENTS/PROJECT SECTION===*/
@@ -535,7 +639,7 @@ body {
   justify-content: space-between;
 }
 
-.footer-social-link-item {
+.footer-social-link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -543,6 +647,7 @@ body {
   width: 44px;
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link-icon {
@@ -585,6 +690,7 @@ body {
   letter-spacing: 0.03em;
 
   color: var(--adress-link-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address {
@@ -596,3 +702,48 @@ address p {
 }
 
 /*=======END FOOTER======*/
+
+/*========MODAL======*/
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal {
+  position: absolute;
+  background-color: var(--third-color);
+  width: 528px;
+  height: 581px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: 250ms;
+}
+.close_modal-btn_button {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background-color: var(--third-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  top: 8px;
+  right: 8px;
+}
