--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ body {
   height: 44px;
   fill: var(--first-fill-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*======END TEAM SECTION======*/
